belajar-container/k8s/examples/06-webapp-clusterip.yml
# Gunakan file ini jika menggunakan kubectl port-forward atau Ingress
# Copy file ini menjadi 06-webapp.yml untuk menggunakan ClusterIP

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-belajar
  labels:
    app: belajar-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: belajar-app
  template:
    metadata:
      labels:
        app: belajar-app
    spec:
      containers:
      - name: app
        image: endymuhardin/belajar-container:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-belajar
  labels:
    app: belajar-app
spec:
  type: ClusterIP  # ClusterIP untuk port-forward atau Ingress
  selector:
    app: belajar-app
  ports:
  - port: 8080
    targetPort: 8080
